Name and details Changes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>Pikachu Detective - Portfolio</title>
+    <title>Bhuvan U Kadlas - Portfolio</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
@@ -45,7 +45,7 @@
           <img src="https://i.imgur.com/fFYP6zLh.png" alt="" class="img-fluid rounded-circle" />
           <h1 class="text-light"><a href="index.html">Pikachu Detective</a></h1>
           <div class="social-links mt-3 text-center">
-            <a href="https://linkedin.com/"><i class="bx bxl-linkedin"></i></a><a href="https://twitter.com/"><i class="bx bxl-twitter"></i></a><a href="https://github.com/"><i class="bx bxl-github"></i></a><a href="https://instagr.am/"><i class="bx bxl-instagram"></i></a><a href="https://fb.me/"><i class="bx bxl-facebook"></i></a>
+            <a href="https://www.linkedin.com/in/bhuvan-u-kadlas-524b3810b/"><i class="bx bxl-linkedin"></i></a><a href="https://twitter.com/BKadlas"><i class="bx bxl-twitter"></i></a><a href="https://github.com/bhuvan2002"><i class="bx bxl-github"></i></a><a href="https://instagr.am/"><i class="bx bxl-instagram"></i></a><a href="https://www.facebook.com/profile.php?id=100069645639974"><i class="bx bxl-facebook"></i></a>
           </div>
         </div>
 
@@ -79,8 +79,8 @@
     <!-- ======= Hero Section ======= -->
     <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
       <div class="hero-container" data-aos="fade-in">
-        <h1>Pikachu Detective</h1>
-        <p>I'm <span class="typed" data-typed-items="Developer, Student, Problem Solver, Gamer, Rider"></span></p>
+        <h1>Bhuvan U Kadlas</h1>
+        <p>I'm <span class="typed" data-typed-items="Developer, Student, Problem Solver, Gamer"></span></p>
       </div>
     </section>
     <!-- End Hero -->
@@ -91,33 +91,33 @@
         <div class="container">
           <div class="section-title">
             <h2>About</h2>
-            <p>GSSoC '22, YouTuber, Full Stack JavaScript, Careers Mentor, Hackathon Hunter, Innovator, React JS Specialist, Speaker, FullStack JS Developer, DevRel, Blockchain Enthusiast, Top 0.05% Overall in Stack Overflow</p>
+            <p>GSSoC '22, Full Stack Developer, Hackathon Hunter, Innovator, Learning React JS, FullStack JS Developer,  Cloud Computing Enthusiast</p>
           </div>
 
           <div class="row">
             <div class="col-lg-4" data-aos="fade-right"><img src="https://i.imgur.com/fFYP6zLh.png" class="img-fluid" alt="" /></div>
             <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-              <h3>Full Stack JavaScript Specialist & YouTuber</h3>
-              <p class="fst-italic">Working with JavaScript specifically React JS & Node JS and creating awesome content on YouTube.</p>
+              <h3>Second Year Student with Full Stack Web Developer</h3>
+              <p class="fst-italic">Studying Second Year Computer Science Engineering at Vidyavardhaka College of Engineering.</p>
               <div class="row">
                 <div class="col-lg-6">
                   <ul>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>22 March 1995</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>praveen.science</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+44 789 654 3210</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>London, England, UK</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>19 August 2002</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>bhuvanukadlas</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 9353833178</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Mysore, Karnataka, India</span></li>
                   </ul>
                 </div>
                 <div class="col-lg-6">
                   <ul>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Education:</strong> <span>Cloud Computing Degree</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Work:</strong> <span>Vetti</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>dont-spam@praveen.science</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Education:</strong> <span>Bachelor of Computer Science and Engineering</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Work:</strong> <span>Student</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>bhuvanumesh123@gmail.com</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                   </ul>
                 </div>
               </div>
-              <p>People call me Praveen or PravMan. I am an ailurophile, vegetarian, and an experimental chef. Well, I would like to experiment as much as I can, on food and my life. My body is made up of HTML & CSS, which is literally me! This defines me as a Full Stack Web Developer (Front End, Back End, Middleware, Whatever...).</p>
+              <p>People call me Bhuvan.  vegetarian, and an experimental chef. Well, I would like to experiment as much as I can, on food and my life. My body is made up of HTML & CSS, which is literally me! This defines me as a Full Stack Web Developer (Front End, Back End, Middleware, Whatever...)</p>
             </div>
           </div>
         </div>
@@ -548,22 +548,22 @@
                 <div class="address">
                   <i class="bi bi-geo-alt"></i>
                   <h4>Location:</h4>
-                  <p>A108 Adam Street, New York, NY 535022</p>
+                  <p>Mysore, Karnataka</p>
                 </div>
 
                 <div class="email">
                   <i class="bi bi-envelope"></i>
                   <h4>Email:</h4>
-                  <p>info@example.com</p>
+                  <p>bhuvanumesh123@gmail.com</p>
                 </div>
 
                 <div class="phone">
                   <i class="bi bi-phone"></i>
                   <h4>Call:</h4>
-                  <p>+1 5589 55488 55s</p>
+                  <p>+91 9353833178</p>
                 </div>
 
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border: 0; width: 100%; height: 290px" allowfullscreen></iframe>
+                <iframe src="https://www.google.com/maps/d/u/0/viewer?msa=0&hl=en&ie=UTF8&ll=12.22959300000001%2C76.65161099999999&spn=0.016651%2C0.038624&t=h&z=15&mid=132uDjpCB5qV9r-ZiNy7SzSnZnpk" frameborder="0" style="border: 0; width: 100%; height: 290px" allowfullscreen></iframe>
               </div>
             </div>
 
@@ -603,20 +603,7 @@
     <!-- End #main -->
 
     <!-- ======= Footer ======= -->
-    <footer id="footer">
-      <div class="container">
-        <div class="copyright">
-          &copy; Copyright <strong><span>iPortfolio</span></strong>
-        </div>
-        <div class="credits">
-          <!-- All the links in the footer should remain intact. -->
-          <!-- You can delete the links only if you purchased the pro version. -->
-          <!-- Licensing information: https://bootstrapmade.com/license/ -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-        </div>
-      </div>
-    </footer>
+  
     <!-- End  Footer -->
 
     <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
