--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="d-flex flex-column">
         <div class="profile">
           <img src="https://i.imgur.com/fFYP6zLh.png" alt="" class="img-fluid rounded-circle" />
-          <h1 class="text-light"><a href="index.html">Pikachu Detective</a></h1>
+          <h1 class="text-light"><a href="index.html">Bhuvan U Kadlas</a></h1>
           <div class="social-links mt-3 text-center">
             <a href="https://www.linkedin.com/in/bhuvan-u-kadlas-524b3810b/"><i class="bx bxl-linkedin"></i></a><a href="https://twitter.com/BKadlas"><i class="bx bxl-twitter"></i></a><a href="https://github.com/bhuvan2002"><i class="bx bxl-github"></i></a><a href="https://instagr.am/"><i class="bx bxl-instagram"></i></a><a href="https://www.facebook.com/profile.php?id=100069645639974"><i class="bx bxl-facebook"></i></a>
           </div>
