--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
                   <p>+91 9353833178</p>
                 </div>
 
-                <iframe src="https://goo.gl/maps/2hxAtv5T1tC1tVfK6" frameborder="0" style="border: 0; width: 100%; height: 290px" allowfullscreen></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62369.22146146938!2d76.6356898!3d12.31064575!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3baf70381d572ef9%3A0x2b89ece8c0f8396d!2sMysuru%2C%20Karnataka!5e0!3m2!1sen!2sin!4v1666013300345!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div>
             </div>
 
